// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StorybookConfiguration generator should configure storybook to use webpack 5 1`] = `
"import type { StorybookConfig } from '@storybook/angular';

const config: StorybookConfig = {
  stories: ['../**/*.stories.@(js|jsx|ts|tsx|mdx)'],
  addons: ['@storybook/addon-essentials', '@storybook/addon-interactions'],
  framework: {
    name: '@storybook/angular',
    options: {},
  },
};

export default config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`StorybookConfiguration generator should configure storybook with interaction tests and install dependencies 1`] = `
"import type { Meta, StoryObj } from '@storybook/angular';
import { TestButtonComponent } from './test-button.component';

import { within } from '@storybook/testing-library';
import { expect } from '@storybook/jest';

const meta: Meta<TestButtonComponent> = {
  component: TestButtonComponent,
  title: 'TestButtonComponent',
};
export default meta;
type Story = StoryObj<TestButtonComponent>;

export const Primary: Story = {
  args: {
    buttonType: 'button',
    style: 'default',
    age: 0,
    isOn: false,
  },
};

export const Heading: Story = {
  args: {
    buttonType: 'button',
    style: 'default',
    age: 0,
    isOn: false,
  },
  play: async ({ canvasElement }) => {
    const canvas = within(canvasElement);
    expect(canvas.getByText(/test-button works!/gi)).toBeTruthy();
  },
};
"
`;

exports[`StorybookConfiguration generator should configure storybook with interaction tests and install dependencies 2`] = `
"import type { Meta, StoryObj } from '@storybook/angular';
import { TestOtherComponent } from './test-other.component';

import { within } from '@storybook/testing-library';
import { expect } from '@storybook/jest';

const meta: Meta<TestOtherComponent> = {
  component: TestOtherComponent,
  title: 'TestOtherComponent',
};
export default meta;
type Story = StoryObj<TestOtherComponent>;

export const Primary: Story = {
  args: {},
};

export const Heading: Story = {
  args: {},
  play: async ({ canvasElement }) => {
    const canvas = within(canvasElement);
    expect(canvas.getByText(/test-other works!/gi)).toBeTruthy();
  },
};
"
`;

exports[`StorybookConfiguration generator should generate in the correct folder 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  "apps/.gitignore",
  "jest.config.ts",
  "jest.preset.js",
  "libs/.gitignore",
  "libs/test-ui-lib/.eslintrc.json",
  "libs/test-ui-lib/.storybook/main.ts",
  "libs/test-ui-lib/.storybook/preview.ts",
  "libs/test-ui-lib/.storybook/tsconfig.json",
  "libs/test-ui-lib/jest.config.ts",
  "libs/test-ui-lib/package.json",
  "libs/test-ui-lib/project.json",
  "libs/test-ui-lib/README.md",
  "libs/test-ui-lib/secondary-entry-point/ng-package.json",
  "libs/test-ui-lib/secondary-entry-point/README.md",
  "libs/test-ui-lib/secondary-entry-point/src/index.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.component.css",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.component.html",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.component.spec.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.component.stories.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.component.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-entry-point.module.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.component.css",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.component.html",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.component.spec.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.component.stories.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.component.ts",
  "libs/test-ui-lib/src/index.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.css",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.html",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/index.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel.module.ts",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.css",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.html",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.ts",
  "libs/test-ui-lib/src/lib/nested/nested.module.ts",
  "libs/test-ui-lib/src/lib/standalone/standalone.component.css",
  "libs/test-ui-lib/src/lib/standalone/standalone.component.html",
  "libs/test-ui-lib/src/lib/standalone/standalone.component.spec.ts",
  "libs/test-ui-lib/src/lib/standalone/standalone.component.stories.ts",
  "libs/test-ui-lib/src/lib/standalone/standalone.component.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.css",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.html",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.spec.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.stories.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.css",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.html",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.spec.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.stories.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/static-member-declarations.module.ts",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.css",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.html",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.ts",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.css",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.html",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.spec.ts",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.stories.ts",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.ts",
  "libs/test-ui-lib/src/lib/test-ui-lib.module.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.css",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.html",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.css",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.html",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare.module.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.css",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.html",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.css",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.html",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.css",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.html",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare.module.ts",
  "libs/test-ui-lib/src/test-setup.ts",
  "libs/test-ui-lib/tsconfig.json",
  "libs/test-ui-lib/tsconfig.lib.json",
  "libs/test-ui-lib/tsconfig.spec.json",
  "nx.json",
  "package.json",
  "tsconfig.base.json",
]
`;

exports[`StorybookConfiguration generator should generate the right files 1`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  "apps/.gitignore",
  "jest.config.ts",
  "jest.preset.js",
  "libs/.gitignore",
  "libs/test-ui-lib/.eslintrc.json",
  "libs/test-ui-lib/.storybook/main.ts",
  "libs/test-ui-lib/.storybook/preview.ts",
  "libs/test-ui-lib/.storybook/tsconfig.json",
  "libs/test-ui-lib/jest.config.ts",
  "libs/test-ui-lib/package.json",
  "libs/test-ui-lib/project.json",
  "libs/test-ui-lib/README.md",
  "libs/test-ui-lib/secondary-entry-point/ng-package.json",
  "libs/test-ui-lib/secondary-entry-point/README.md",
  "libs/test-ui-lib/secondary-entry-point/src/index.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.component.css",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.component.html",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.component.spec.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.component.stories.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-button/secondary-button.component.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-entry-point.module.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.component.css",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.component.html",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.component.spec.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.component.stories.ts",
  "libs/test-ui-lib/secondary-entry-point/src/lib/secondary-standalone/secondary-standalone.component.ts",
  "libs/test-ui-lib/src/index.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.css",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.html",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/barrel-button.component.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel-button/index.ts",
  "libs/test-ui-lib/src/lib/barrel/barrel.module.ts",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.css",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.html",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/nested/nested-button/nested-button.component.ts",
  "libs/test-ui-lib/src/lib/nested/nested.module.ts",
  "libs/test-ui-lib/src/lib/standalone/standalone.component.css",
  "libs/test-ui-lib/src/lib/standalone/standalone.component.html",
  "libs/test-ui-lib/src/lib/standalone/standalone.component.spec.ts",
  "libs/test-ui-lib/src/lib/standalone/standalone.component.stories.ts",
  "libs/test-ui-lib/src/lib/standalone/standalone.component.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.css",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.html",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.spec.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.stories.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp1/cmp1.component.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.css",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.html",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.spec.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.stories.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/cmp2/cmp2.component.ts",
  "libs/test-ui-lib/src/lib/static-member-declarations/static-member-declarations.module.ts",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.css",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.html",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/test-button/test-button.component.ts",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.css",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.html",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.spec.ts",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.stories.ts",
  "libs/test-ui-lib/src/lib/test-other/test-other.component.ts",
  "libs/test-ui-lib/src/lib/test-ui-lib.module.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.css",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.html",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-button/variable-declare-button.component.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.css",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.html",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare-view/variable-declare-view.component.ts",
  "libs/test-ui-lib/src/lib/variable-declare/variable-declare.module.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.css",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.html",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-anotherview/variable-spread-declare-anotherview.component.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.css",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.html",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-button/variable-spread-declare-button.component.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.css",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.html",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.spec.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.stories.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare-view/variable-spread-declare-view.component.ts",
  "libs/test-ui-lib/src/lib/variable-spread-declare/variable-spread-declare.module.ts",
  "libs/test-ui-lib/src/test-setup.ts",
  "libs/test-ui-lib/tsconfig.json",
  "libs/test-ui-lib/tsconfig.lib.json",
  "libs/test-ui-lib/tsconfig.spec.json",
  "nx.json",
  "package.json",
  "tsconfig.base.json",
]
`;
